@startuml
skinparam packageStyle rectangle
title Config Layer (VirtualServer / Location + Limits + Upstreams)

class CgiSpec { 
	+string bin 
	+int timeout_ms 
}

class RateLimitConfig { 
	+int requests_per_minute 
	+int burst 
	+bool enabled 
}

class PutPatchConfig {
  +string root_directory
  +int    max_body_bytes
  +bool   allow_put
  +bool   allow_patch
  +bool   generate_etag
}

class Upstream { 
	+string host 
	+int port 
	+bool healthy 
	+int weight 
}

class UpstreamPool {
  +vector<Upstream> nodes
  +string strategy
  +string health_path
  +int    health_interval_ms
}

class Location {
  +string  path_prefix
  +bool    regex
  +string  root
  +bool    autoindex
  +vector<string> index_files
  +vector<string> allowed_methods
  +string  upload_dir
  +bool    is_proxy
  +string  proxy_name
  +map<string,CgiSpec> cgi_by_ext
  +RateLimitConfig rate_limit
  +PutPatchConfig  write_conf
}

class VirtualServer {
  +string  listen_host
  +int     listen_port
  +vector<string> server_names
  +string  root
  +vector<string> index_files
  +map<int,string> error_pages
  +RateLimitConfig rate_limit
  +map<string,UpstreamPool> upstreams
  +vector<Location> locations
}

class ServerConfig {
  +vector<VirtualServer> servers
  +bool   session_enabled
  +string session_cookie_name
  +int    session_max_age
  +bool   session_secure
  +bool   session_http_only
  +string session_same_site
  +map<string,string> mime_mapping
  +map<string,CgiSpec> cgi_defaults
}

ServerConfig *-- VirtualServer
VirtualServer *-- Location
VirtualServer *-- UpstreamPool
UpstreamPool *-- Upstream
Location ..> CgiSpec
ServerConfig ..> CgiSpec
@enduml
